# speedcrunch

./: README.md
doc/: Complex number notes.txt
doc/legacy/: README.md
doc/manual/: .gitignore  CMakeLists.txt  Makefile  conf.py  doc-tool.py  index.rst  installation.rst  make.bat
doc/manual/_templates_embedded/: layout.html
doc/manual/devguide/: docguide.rst  index.rst
doc/manual/extensions/: qtkeyword.py  sc_post_config.py  speedcrunch_domain.py  translations.py
doc/manual/locale/de/LC_MESSAGES/: extra-doc-strings.po  index.po
doc/manual/locale/fr/LC_MESSAGES/: installation.po  reference.po
doc/manual/reference/: basic.rst  functions.rst  ieee754.rst  index.rst  integer.rst  statistical.rst
doc/manual/userguide/: index.rst
doc/src/: .gitignore  Makefile  README.rst  conf.py  contents.rst  doc-tool.py  docs_intro.rst  index.rst  languages.py  make.bat
doc/src/_static_standalone/: extra.css
doc/src/_templates_standalone/: download.html  entrance.html  entrance_navbar.html  layout.html  navbar.html
doc/src/advanced/: index.rst
doc/src/devguide/: buildingfromsource.rst  colorschemeformat.rst  docguide.rst  index.rst  linuxpackages.rst
doc/src/extensions/: qtkeyword.py  sc_lexer.py  speedcrunch_domain.py  translations.py
doc/src/reference/: basic.rst  index.rst  integer.rst  statistical.rst
doc/src/userguide/: advanced.rst  first_steps.rst  index.rst  installation.rst  interface.rst  syntax.rst
pkg/: QtWin32Deploy.cmake  speedcrunch.appdata.xml  speedcrunch.desktop
pkg/cross-linux/: .gitignore  Vagrantfile  build-qt.sh  build-speedcrunch.sh  install-build-deps.sh  rpm-specfile
pkg/desktop-appdata/.tx/: config
pkg/linux-metadata/: metadata-tool.sh  speedcrunch.appdata.xml.in
src/: CMakeLists.txt  SourceFiles.cmake  SpeedCrunchCPack.cmake  main.cpp  speedcrunch.pro
src/cmake/: MacdeployQt.cmake
src/core/: book.cpp  constants.cpp  errors.h  evaluator.cpp  evaluator.cpp.autosave  evaluator.h  functions.cpp  functions.h  manualserver.cpp  manualserver.h  numberformatter.cpp  numberformatter.h  opcode.h  session.cpp  session.h  sessionhistory.cpp  sessionhistory.h  sessionvariables.cpp  sessionvariables.h  settings.cpp  settings.h  userfunction.cpp  userfunction.h  variable.cpp  variable.h
src/gui/: aboutbox.cpp  bitfieldwidget.cpp  bitfieldwidget.h  bookdock.cpp  constantswidget.cpp  editor.cpp  editor.h  functionswidget.cpp  genericdock.h  historywidget.cpp  historywidget.h  keypad.cpp  keypad.h  mainwindow.cpp  mainwindow.h  manualwindow.cpp  manualwindow.h  resultdisplay.cpp  resultdisplay.h  syntaxhighlighter.cpp  syntaxhighlighter.h  userfunctionlistwidget.cpp  userfunctionsdock.h  variablelistwidget.cpp  variablelistwidget.h  variablesdock.cpp  variablesdock.h
src/math/: cmath.cpp  cmath.h  cnumberparser.cpp  cnumberparser.h  hmath.cpp  hmath.h  quantity.cpp  quantity.h  rational.cpp  rational.h  units.cpp  units.h  value.cpp  value.h
src/resources/: speedcrunch.qrc
src/resources/color-schemes/: Solarized Light.color-scheme  Standard.color-scheme  Sublime.color-scheme  Terminal.color-scheme  Tomorrow Night Eighties.json
src/resources/locale/: ar.ts  ca_ES.ts  cs_CZ.ts  da.ts  de_DE.ts  el.ts  en_GB.ts  es_AR.ts  es_ES.ts  et_EE.ts  eu_ES.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt.ts  lv_LV.ts  nb_NO.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  sk.ts  sv_SE.ts  tr_TR.ts  uz_Latn_UZ.ts  vi.ts  zh_CN.ts
src/tests/: common.pri  testcmath.cpp  testcmath.pro  testcnumberparser.cpp  testcnumberparser.pro  testdmath.cpp  testevaluator.cpp  testevaluator.pro  testfloatnum.pro  testhmath.cpp  testhmath.pro  tests.pro  testser.cpp
